--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "test:e2e": "playwright test",
     "typecheck": "tsc --noEmit",
     "seed:jsonld": "ts-node scripts/jsonldToTriple.ts",
     "compile:circuit": "ts-node scripts/compile-circuit.ts",
@@ -52,6 +53,7 @@
     "@next/bundle-analyzer": "^14.2.0",
     "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.12",
     "@types/jsonld": "^1.3.1",
@@ -60,6 +62,7 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@types/snarkjs": "^0.7.9",
+    "@types/testing-library__react": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "autoprefixer": "^10.4.19",
@@ -73,6 +76,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "lint-staged": "^15.2.2",
     "n3": "^1.17.3",
     "postcss": "^8.4.38",
@@ -83,7 +87,8 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.32.1",
+    "whatwg-fetch": "^3.6.20"
   },
   "overrides": {
     "parse-duration": "^2.1.3"
